@@ -20,19 +20,20 @@
 
 package password.pwm.config;
 
+import org.jrivard.xmlchai.XmlElement;
 import password.pwm.PwmConstants;
 import password.pwm.i18n.Config;
 import password.pwm.util.i18n.LocaleHelper;
+import password.pwm.util.java.CollectionUtil;
 import password.pwm.util.java.JavaHelper;
 import password.pwm.util.java.LazySupplier;
-import password.pwm.util.java.StringUtil;
-import password.pwm.util.java.XmlElement;
 import password.pwm.util.macro.MacroRequest;
 
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
+import java.util.EnumSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
@@ -45,12 +46,16 @@ public enum PwmSettingCategory
     TEMPLATES( null ),
     NOTES( null ),
 
+    DOMAINS( null ),
+
     LDAP( null ),
     SETTINGS( null ),
     PROFILES( null ),
     MODULES( null ),
     MODULES_PUBLIC( MODULES ),
     MODULES_PRIVATE( MODULES ),
+
+    SYSTEM( SETTINGS ),
 
     LDAP_PROFILE( LDAP ),
     LDAP_BASE( LDAP_PROFILE ),
@@ -69,10 +74,14 @@ public enum PwmSettingCategory
     ORACLE_DS( LDAP_SETTINGS ),
 
     APPLICATION( SETTINGS ),
-    GENERAL( APPLICATION ),
-    CLUSTERING( APPLICATION ),
-    LOCALIZATION( APPLICATION ),
-    TELEMETRY( APPLICATION ),
+
+
+    NODES( SYSTEM ),
+
+    DOMAIN( SETTINGS ),
+    URL_SETTINGS( SETTINGS ),
+    LOCALIZATION( SETTINGS ),
+    TELEMETRY( SETTINGS ),
 
     AUDITING( SETTINGS ),
     AUDIT_CONFIG( AUDITING ),
@@ -83,6 +92,7 @@ public enum PwmSettingCategory
     CAPTCHA( SETTINGS ),
 
     INTRUDER( SETTINGS ),
+    INTRUDER_SYSTEM_SETTINGS( INTRUDER ),
     INTRUDER_SETTINGS( INTRUDER ),
     INTRUDER_TIMEOUTS( INTRUDER ),
 
@@ -131,6 +141,7 @@ public enum PwmSettingCategory
     PASSWORD_POLICY( PROFILES ),
     CHALLENGE_POLICY( PROFILES ),
 
+    HTTP_CLIENT( SETTINGS ),
     HTTPS_SERVER( SETTINGS ),
 
     ADMINISTRATION( MODULES_PRIVATE ),
@@ -144,7 +155,9 @@ public enum PwmSettingCategory
     CHANGE_PASSWORD_SETTINGS( CHANGE_PASSWORD ),
     CHANGE_PASSWORD_PROFILE( CHANGE_PASSWORD ),
 
-    CHALLENGE( MODULES_PRIVATE ),
+    SETUP_RESPONSES( MODULES_PRIVATE ),
+    SETUP_RESPONSES_SETTINGS( SETUP_RESPONSES ),
+    SETUP_RESPONSES_PROFILE( SETUP_RESPONSES ),
 
     RECOVERY( MODULES_PUBLIC ),
     RECOVERY_SETTINGS( RECOVERY ),
@@ -192,7 +205,8 @@ public enum PwmSettingCategory
     DELETE_ACCOUNT_SETTINGS( DELETE_ACCOUNT ),
     DELETE_ACCOUNT_PROFILE( DELETE_ACCOUNT ),
 
-    INTERNAL( SETTINGS ),;
+    INTERNAL_DOMAIN( SETTINGS ),
+    INTERNAL_SYSTEM( SETTINGS ),;
 
     private static final Comparator<PwmSettingCategory> MENU_LOCATION_COMPARATOR = Comparator.comparing(
             ( pwmSettingCategory ) -> pwmSettingCategory.toMenuLocationDebug( null, PwmConstants.DEFAULT_LOCALE ) );
@@ -303,10 +317,10 @@ public enum PwmSettingCategory
             final Locale locale
     )
     {
-        return toMenuLocationDebug( this, profileID, locale );
+        return toMenuLocationDebugImpl( this, profileID, locale );
     }
 
-    private static String toMenuLocationDebug(
+    private static String toMenuLocationDebugImpl(
             final PwmSettingCategory category,
             final String profileID,
             final Locale locale
@@ -314,7 +328,7 @@ public enum PwmSettingCategory
     {
         final String parentValue = category.getParent() == null
                 ? ""
-                : toMenuLocationDebug( category.getParent(), profileID, locale );
+                : toMenuLocationDebugImpl( category.getParent(), profileID, locale );
 
         final String separator = LocaleHelper.getLocalizedMessage( locale, Config.Display_SettingNavigationSeparator, null );
         final StringBuilder sb = new StringBuilder();
@@ -350,12 +364,10 @@ public enum PwmSettingCategory
 
     public static List<PwmSettingCategory> valuesForReferenceDoc()
     {
-        final List<PwmSettingCategory> values = sortedValues().stream()
+        return sortedValues().stream()
                 .filter( ( category ) -> !category.isHidden() )
                 .filter( ( category ) -> !category.getSettings().isEmpty() )
-                .collect( Collectors.toList( ) );
-
-        return Collections.unmodifiableList( values );
+                .collect( Collectors.toUnmodifiableList( ) );
     }
 
     public static List<PwmSettingCategory> associatedProfileCategories( final PwmSettingCategory inputCategory )
@@ -375,7 +387,7 @@ public enum PwmSettingCategory
         returnValues.add( topLevelCategory );
         returnValues.addAll( topLevelCategory.getChildren() );
 
-        return Collections.unmodifiableList( returnValues );
+        return List.copyOf( returnValues );
     }
 
     public static Optional<PwmSettingCategory> forKey( final String key )
@@ -413,10 +425,10 @@ public enum PwmSettingCategory
                 final Optional<XmlElement> profileElement = categoryElement.getChild( "profile" );
                 if ( profileElement.isPresent() )
                 {
-                    final String settingKey = profileElement.get().getAttributeValue( "setting" );
-                    if ( settingKey != null )
+                    final Optional<String> settingKey = profileElement.get().getAttribute( "setting" );
+                    if ( settingKey.isPresent() )
                     {
-                        return PwmSetting.forKey( settingKey );
+                        return PwmSetting.forKey( settingKey.get() );
                     }
                 }
                 if ( nested )
@@ -435,8 +447,9 @@ public enum PwmSettingCategory
         private static int readLevel( final PwmSettingCategory category )
         {
             final XmlElement settingElement = PwmSettingXml.readCategoryXml( category );
-            final String levelAttribute = settingElement.getAttributeValue( PwmSettingXml.XML_ELEMENT_LEVEL );
-            return levelAttribute != null ? Integer.parseInt( levelAttribute ) : 0;
+            return settingElement.getAttribute( PwmSettingXml.XML_ELEMENT_LEVEL )
+                    .map( ( value ) -> JavaHelper.silentParseInt( value, 0 ) )
+                    .orElse( 0 );
         }
 
         private static PwmSettingScope readScope( final PwmSettingCategory category )
@@ -461,10 +474,10 @@ public enum PwmSettingCategory
             while ( nextCategory != null )
             {
                 final XmlElement settingElement = PwmSettingXml.readCategoryXml( category );
-                final String attributeValue = settingElement.getAttributeValue( attribute );
-                if ( !StringUtil.isEmpty( attributeValue ) )
+                final Optional<String> attributeValue = settingElement.getAttribute( attribute );
+                if ( attributeValue.isPresent() )
                 {
-                    return attributeValue;
+                    return attributeValue.get();
                 }
                 nextCategory = nextCategory.getParent();
             }
@@ -496,18 +509,20 @@ public enum PwmSettingCategory
 
         public static Set<PwmSettingCategory> readChildren( final PwmSettingCategory category )
         {
-            final Set<PwmSettingCategory> categories = Arrays.stream( PwmSettingCategory.values() )
+            final Set<PwmSettingCategory> categories = EnumSet.allOf( PwmSettingCategory.class )
+                    .stream()
                     .filter( ( loopCategory ) -> loopCategory.getParent() == category )
-                    .collect( Collectors.toSet() );
-            return Collections.unmodifiableSet( JavaHelper.copiedEnumSet( categories, PwmSettingCategory.class ) );
+                    .collect( Collectors.toUnmodifiableSet() );
+            return Collections.unmodifiableSet( CollectionUtil.copyToEnumSet( categories, PwmSettingCategory.class ) );
         }
 
         public static Set<PwmSetting> readSettings( final PwmSettingCategory category )
         {
-            final Set<PwmSetting> settings = Arrays.stream( PwmSetting.values() )
+            final Set<PwmSetting> settings = EnumSet.allOf( PwmSetting.class )
+                    .stream()
                     .filter( ( setting ) -> setting.getCategory() == category )
                     .collect( Collectors.toSet() );
-            return Collections.unmodifiableSet( JavaHelper.copiedEnumSet( settings, PwmSetting.class ) );
+            return Collections.unmodifiableSet( CollectionUtil.copyToEnumSet( settings, PwmSetting.class ) );
         }
     }
 }
