@@ -25,7 +25,7 @@ import password.pwm.PwmConstants;
 import password.pwm.error.ErrorInformation;
 import password.pwm.error.PwmError;
 import password.pwm.error.PwmOperationalException;
-import password.pwm.util.java.JsonUtil;
+import password.pwm.util.json.JsonFactory;
 import password.pwm.util.java.StringUtil;
 import password.pwm.util.logging.PwmLogger;
 import password.pwm.util.secure.PwmBlockAlgorithm;
@@ -34,8 +34,6 @@ import password.pwm.util.secure.PwmSecurityKey;
 import password.pwm.util.secure.SecureEngine;
 
 import java.io.Serializable;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -58,7 +56,7 @@ public abstract class StoredValueEncoder
         Mode( final SecureOutputEngine secureOutputEngine, final String... prefixes )
         {
             this.secureOutputEngine = secureOutputEngine;
-            this.prefixes = Collections.unmodifiableList( Arrays.asList( prefixes ) );
+            this.prefixes = List.of( prefixes );
         }
 
         public List<String> getPrefixes()
@@ -68,7 +66,7 @@ public abstract class StoredValueEncoder
 
         public String getPrefix()
         {
-            return prefixes.iterator().next();
+            return prefixes.get( 0 );
         }
 
         public SecureOutputEngine getSecureOutputEngine()
@@ -115,7 +113,7 @@ public abstract class StoredValueEncoder
 
         static ParsedInput parseInput( final String value )
         {
-            if ( !StringUtil.isEmpty( value ) )
+            if ( StringUtil.notEmpty( value ) )
             {
                 for ( final Mode mode : Mode.values() )
                 {
@@ -200,7 +198,7 @@ public abstract class StoredValueEncoder
             {
                 final String errorMsg = "unable to decrypt config password value for setting: " + e.getMessage();
                 final ErrorInformation errorInfo = new ErrorInformation( PwmError.CONFIG_FORMAT_ERROR, errorMsg );
-                LOGGER.warn( () -> errorInfo.toDebugStr() );
+                LOGGER.warn( errorInfo::toDebugStr );
                 throw new PwmOperationalException( errorInfo );
             }
         }
@@ -223,7 +221,7 @@ public abstract class StoredValueEncoder
                 {
                     final String salt = PwmRandom.getInstance().alphaNumericString( 32 );
                     final StoredPwData storedPwData = new StoredPwData( salt, rawValue );
-                    final String jsonData = JsonUtil.serialize( storedPwData );
+                    final String jsonData = JsonFactory.get().serialize( storedPwData );
                     final String encryptedValue = SecureEngine.encryptToString( jsonData, pwmSecurityKey, PwmBlockAlgorithm.CONFIG );
                     return Mode.ENCODED.getPrefix() + encryptedValue;
                 }
@@ -245,14 +243,14 @@ public abstract class StoredValueEncoder
             {
                 final String pwValueSuffix = input.getValue( );
                 final String decryptedValue = SecureEngine.decryptStringValue( pwValueSuffix, pwmSecurityKey, PwmBlockAlgorithm.CONFIG );
-                final StoredPwData storedPwData = JsonUtil.deserialize( decryptedValue, StoredPwData.class );
+                final StoredPwData storedPwData = JsonFactory.get().deserialize( decryptedValue, StoredPwData.class );
                 return storedPwData.getValue();
             }
             catch ( final Exception e )
             {
                 final String errorMsg = "unable to decrypt password value for setting: " + e.getMessage();
                 final ErrorInformation errorInfo = new ErrorInformation( PwmError.CONFIG_FORMAT_ERROR, errorMsg );
-                LOGGER.warn( () -> errorInfo.toDebugStr() );
+                LOGGER.warn( errorInfo::toDebugStr );
                 throw new PwmOperationalException( errorInfo );
             }
         }
