@@ -20,18 +20,16 @@
 
 package password.pwm.config.value;
 
-import com.google.gson.reflect.TypeToken;
+import org.jrivard.xmlchai.XmlChai;
+import org.jrivard.xmlchai.XmlElement;
 import password.pwm.config.PwmSetting;
-import password.pwm.config.stored.StoredConfigXmlSerializer;
+import password.pwm.config.stored.StoredConfigXmlConstants;
 import password.pwm.config.stored.XmlOutputProcessData;
 import password.pwm.config.value.data.UserPermission;
-import password.pwm.error.PwmOperationalException;
 import password.pwm.error.PwmUnrecoverableException;
-import password.pwm.ldap.permission.UserPermissionUtility;
 import password.pwm.ldap.permission.UserPermissionType;
-import password.pwm.util.java.JsonUtil;
-import password.pwm.util.java.XmlElement;
-import password.pwm.util.java.XmlFactory;
+import password.pwm.ldap.permission.UserPermissionUtility;
+import password.pwm.util.json.JsonFactory;
 import password.pwm.util.secure.PwmSecurityKey;
 
 import java.util.ArrayList;
@@ -39,6 +37,7 @@ import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Locale;
+import java.util.Optional;
 
 public class UserPermissionValue extends AbstractValue implements StoredValue
 {
@@ -81,9 +80,7 @@ public class UserPermissionValue extends AbstractValue implements StoredValue
                 }
                 else
                 {
-                    List<UserPermission> srcList = JsonUtil.deserialize( input, new TypeToken<List<UserPermission>>()
-                    {
-                    } );
+                    List<UserPermission> srcList = JsonFactory.get().deserializeList( input, UserPermission.class );
                     srcList = srcList == null ? Collections.emptyList() : srcList;
                     return new UserPermissionValue( Collections.unmodifiableList( srcList ) );
                 }
@@ -91,27 +88,27 @@ public class UserPermissionValue extends AbstractValue implements StoredValue
 
             @Override
             public UserPermissionValue fromXmlElement( final PwmSetting pwmSetting, final XmlElement settingElement, final PwmSecurityKey key )
-                    throws PwmOperationalException
             {
-                final boolean newType = "2".equals(
-                        settingElement.getAttributeValue( StoredConfigXmlSerializer.StoredConfigXmlConstants.XML_ATTRIBUTE_SYNTAX_VERSION ) );
+                final boolean newType = "2".equals( settingElement.getAttribute( StoredConfigXmlConstants.XML_ATTRIBUTE_SYNTAX_VERSION )
+                                .orElse( "" ) );
+
                 final List<XmlElement> valueElements = settingElement.getChildren( "value" );
                 final List<UserPermission> values = new ArrayList<>();
                 for ( final XmlElement loopValueElement : valueElements )
                 {
-                    final String value = loopValueElement.getText();
-                    if ( value != null && !value.isEmpty() )
+                    final Optional<String> value = loopValueElement.getText();
+                    if ( value.isPresent() )
                     {
                         if ( newType )
                         {
-                            final UserPermission userPermission = JsonUtil.deserialize( value, UserPermission.class );
+                            final UserPermission userPermission = JsonFactory.get().deserialize( value.get(), UserPermission.class );
                             values.add( userPermission );
                         }
                         else
                         {
                             values.add( UserPermission.builder()
                                     .type( UserPermissionType.ldapQuery )
-                                    .ldapQuery( value )
+                                    .ldapQuery( value.get() )
                                     .build() );
                         }
                     }
@@ -126,11 +123,11 @@ public class UserPermissionValue extends AbstractValue implements StoredValue
     @Override
     public List<XmlElement> toXmlValues( final String valueElementName, final XmlOutputProcessData xmlOutputProcessData )
     {
-        final List<XmlElement> returnList = new ArrayList<>();
+        final List<XmlElement> returnList = new ArrayList<>( values.size() );
         for ( final UserPermission value : values )
         {
-            final XmlElement valueElement = XmlFactory.getFactory().newElement( valueElementName );
-            valueElement.addText( JsonUtil.serialize( value ) );
+            final XmlElement valueElement = XmlChai.getFactory().newElement( valueElementName );
+            valueElement.setText( JsonFactory.get().serialize( value ) );
             returnList.add( valueElement );
         }
         return returnList;
@@ -139,13 +136,13 @@ public class UserPermissionValue extends AbstractValue implements StoredValue
     @Override
     public List<UserPermission> toNativeObject( )
     {
-        return Collections.unmodifiableList( values );
+        return List.copyOf( values );
     }
 
     @Override
     public List<String> validateValue( final PwmSetting pwmSetting )
     {
-        final List<String> returnObj = new ArrayList<>();
+        final List<String> returnObj = new ArrayList<>( values.size() );
         for ( final UserPermission userPermission : values )
         {
             try
@@ -184,7 +181,7 @@ public class UserPermissionValue extends AbstractValue implements StoredValue
                 sb.append( userPermission.debugString() );
                 if ( iterator.hasNext() )
                 {
-                    sb.append( "\n" );
+                    sb.append( '\n' );
                 }
             }
             return sb.toString();
